--- a/crypto/scss/style.css
+++ b/crypto/scss/style.css
@@ -20,6 +20,7 @@ button {
   display: table;
   clear: both; }
 
+/*Main page*/
 header {
   background: url(images/h_bg.jpg) no-repeat;
   background-size: cover; }
@@ -121,9 +122,12 @@ header {
     text-align: center;
     color: #fff; }
 
+/*Scroll down to continue main page*/
+/*Other pages*/
 .banner-1 {
   background: url(images/partners.jpg) no-repeat;
   background-size: cover;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
   background-position: center center;
   padding-top: 120px;
   padding-bottom: 120px; }
@@ -133,12 +137,57 @@ header {
     color: #fff;
     text-align: center; }
 
-.partners {
+.banner-2 {
+  background: url(images/investor.jpg) no-repeat;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
+  background-size: cover;
+  background-position: center center;
+  padding-top: 120px;
+  padding-bottom: 120px; }
+
+.banner-3 {
+  background: url(images/about_us.jpg) no-repeat;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
+  background-size: cover;
+  background-position: center center;
+  background-position-y: 75%;
+  padding-top: 120px;
+  padding-bottom: 120px; }
+
+.banner-4 {
+  background: url(images/faq.jpg) no-repeat;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
+  background-size: cover;
+  background-position: center center;
+  background-position-y: 20%;
+  padding-top: 120px;
+  padding-bottom: 120px; }
+
+.banner-5 {
+  background: url(images/calc.png) no-repeat;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
+  background-size: cover;
+  background-position: center center;
+  background-position-y: 80%;
+  padding-top: 120px;
+  padding-bottom: 120px; }
+
+.banner-6 {
+  background: url(images/contact.jpg) no-repeat;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5) inset;
+  background-size: cover;
+  background-position: center center;
+  background-position-y: 15%;
+  padding-top: 120px;
+  padding-bottom: 120px; }
+
+.partners, .investors, .faq, .calculator, .cont_page {
   max-width: 1120px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 50px; }
-  .partners p {
+  margin-top: 50px;
+  padding-bottom: 50px; }
+  .partners p, .investors p, .faq p, .calculator p, .cont_page p {
     text-align: justify;
     font: 14px Arial;
     font-weight: 700;
@@ -146,54 +195,143 @@ header {
     text-indent: 30px;
     line-height: 25px;
     margin-bottom: 30px; }
-  .partners h2 {
+  .partners h4, .investors h4, .faq h4, .calculator h4, .cont_page h4 {
+    text-align: center;
+    font: 18px Arial;
+    font-weight: 700;
+    color: #333;
+    letter-spacing: 1px;
+    margin-bottom: 20px; }
+  .partners ol li, .investors ol li, .faq ol li, .calculator ol li, .cont_page ol li {
+    font: 14px Arial;
+    font-weight: 700;
+    color: #333; }
+    .partners ol li p, .investors ol li p, .faq ol li p, .calculator ol li p, .cont_page ol li p {
+      margin-bottom: 0;
+      text-indent: 0; }
+  .partners ul, .investors ul, .faq ul, .calculator ul, .cont_page ul {
+    padding-left: 30px;
+    margin-bottom: 20px; }
+    .partners ul li p, .investors ul li p, .faq ul li p, .calculator ul li p, .cont_page ul li p {
+      margin-bottom: 0;
+      text-indent: 0; }
+  .partners .b-1 .b1_cont .case, .investors .b-1 .b1_cont .case, .faq .b-1 .b1_cont .case, .calculator .b-1 .b1_cont .case, .cont_page .b-1 .b1_cont .case {
+    vertical-align: top;
+    cursor: pointer; }
+    .partners .b-1 .b1_cont .case:hover, .investors .b-1 .b1_cont .case:hover, .faq .b-1 .b1_cont .case:hover, .calculator .b-1 .b1_cont .case:hover, .cont_page .b-1 .b1_cont .case:hover {
+      margin-top: -10px;
+      transition: 0.5s; }
+    .partners .b-1 .b1_cont .case .case_cont p, .investors .b-1 .b1_cont .case .case_cont p, .faq .b-1 .b1_cont .case .case_cont p, .calculator .b-1 .b1_cont .case .case_cont p, .cont_page .b-1 .b1_cont .case .case_cont p {
+      text-indent: 0;
+      text-align: center; }
+  .partners .bx-wrapper, .investors .bx-wrapper, .faq .bx-wrapper, .calculator .bx-wrapper, .cont_page .bx-wrapper {
+    margin-right: auto !important;
+    margin-left: auto !important;
+    box-shadow: 0 0 0 0;
+    padding-left: 50px !important; }
+  .partners h2, .investors h2, .faq h2, .calculator h2, .cont_page h2 {
     text-transform: uppercase;
     text-align: center;
     font: 14px Arial;
     font-weight: 700;
     color: #333; }
-  .partners .p-img-cont {
+  .partners .p-img-cont, .investors .p-img-cont, .faq .p-img-cont, .calculator .p-img-cont, .cont_page .p-img-cont {
     text-align: center;
     margin-top: 30px; }
-    .partners .p-img-cont img {
+    .partners .p-img-cont img, .investors .p-img-cont img, .faq .p-img-cont img, .calculator .p-img-cont img, .cont_page .p-img-cont img {
       display: inline-block;
       vertical-align: top;
       width: 48%;
       max-width: 540px; }
-  .partners .p-text-right, .partners .p-text-left {
+  .partners .p-text-right, .partners .p-text-left, .investors .p-text-right, .investors .p-text-left, .faq .p-text-right, .faq .p-text-left, .calculator .p-text-right, .calculator .p-text-left, .cont_page .p-text-right, .cont_page .p-text-left {
     width: 47%;
     display: inline-block;
     vertical-align: top;
     margin: 0 1%; }
-    .partners .p-text-right p, .partners .p-text-left p {
+    .partners .p-text-right p, .partners .p-text-left p, .investors .p-text-right p, .investors .p-text-left p, .faq .p-text-right p, .faq .p-text-left p, .calculator .p-text-right p, .calculator .p-text-left p, .cont_page .p-text-right p, .cont_page .p-text-left p {
       text-align: justify;
       font: 14px Arial;
       font-weight: 700;
       color: #333;
       text-indent: 30px;
       line-height: 25px; }
-  .partners .p-lider-img {
+  .partners .p-lider-img, .investors .p-lider-img, .faq .p-lider-img, .calculator .p-lider-img, .cont_page .p-lider-img {
     text-align: center; }
-    .partners .p-lider-img img {
+    .partners .p-lider-img img, .investors .p-lider-img img, .faq .p-lider-img img, .calculator .p-lider-img img, .cont_page .p-lider-img img {
       width: 70%; }
-  .partners h3 {
+  .partners h3, .investors h3, .faq h3, .calculator h3, .cont_page h3 {
     color: #000;
     font: 30px Arial;
     font-weight: 70px;
     text-align: center;
     margin-bottom: 15px; }
-  .partners .border-img {
+  .partners .border-img, .investors .border-img, .faq .border-img, .calculator .border-img, .cont_page .border-img {
     text-align: center; }
-    .partners .border-img .border-left, .partners .border-img .border-right {
+    .partners .border-img .border-left, .partners .border-img .border-right, .investors .border-img .border-left, .investors .border-img .border-right, .faq .border-img .border-left, .faq .border-img .border-right, .calculator .border-img .border-left, .calculator .border-img .border-right, .cont_page .border-img .border-left, .cont_page .border-img .border-right {
       height: 1px;
       width: 150px;
       background: #000;
       display: inline-block;
       vertical-align: middle; }
-    .partners .border-img .lion {
+    .partners .border-img .lion, .investors .border-img .lion, .faq .border-img .lion, .calculator .border-img .lion, .cont_page .border-img .lion {
       display: inline-block;
       vertical-align: middle; }
 
+.about_us {
+  max-width: 1120px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 50px;
+  padding-bottom: 50px; }
+  .about_us p {
+    text-align: justify;
+    font: 14px Arial;
+    font-weight: 700;
+    color: #333;
+    line-height: 20px;
+    margin-bottom: 10px; }
+
+.faq h4 {
+  text-align: left;
+  font-size: 22px; }
+.faq p {
+  text-indent: 0;
+  margin-bottom: 15px; }
+
+.cont_page {
+  text-align: center;
+  max-width: 820px;
+  margin-left: auto;
+  margin-right: auto; }
+  .cont_page .cp_left {
+    display: inline-block;
+    vertical-align: top;
+    width: 48%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 30px; }
+    .cont_page .cp_left h2 {
+      text-align: left;
+      font-size: 24px;
+      text-transform: none;
+      margin-bottom: 15px; }
+    .cont_page .cp_left h4 {
+      text-align: left; }
+    .cont_page .cp_left p {
+      margin-bottom: 0px;
+      text-indent: 0; }
+    .cont_page .cp_left .h4_email {
+      margin-top: 20px; }
+  .cont_page .cp_right {
+    display: inline-block;
+    vertical-align: top;
+    width: 48%;
+    margin-bottom: 30px; }
+    .cont_page .cp_right img {
+      width: 100%;
+      max-width: 280px; }
+
+/*End Other pages*/
 /*Slider*/
 .bx-wrapper {
   border: 0 !important; }
@@ -212,6 +350,7 @@ header {
       background: #fff !important; }
 
 /*End*/
+/*Main page*/
 .b-1 .b1_cont {
   max-width: 1120px;
   margin-left: auto;
@@ -227,7 +366,12 @@ header {
     border-top: 0;
     background-color: #f8f8f8;
     margin-right: 22px;
-    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.08); }
+    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.08);
+    vertical-align: top;
+    cursor: pointer; }
+    .b-1 .b1_cont .case:hover {
+      margin-top: -10px;
+      transition: 0.5s; }
     .b-1 .b1_cont .case:last-child {
       margin-right: 0; }
     .b-1 .b1_cont .case .circle_title {
@@ -367,12 +511,24 @@ header {
 .b-5 {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-image: url(images/bg-5.jpg);
-  margin-bottom: 100px; }
+  background-image: url(images/bg-5.jpg); }
   .b-5 h2 {
     text-align: center;
     font: 16px AB;
     color: #fff; }
+
+.b-5-1 {
+  text-align: center; }
+  .b-5-1 h2 {
+    font: 14px Arial;
+    color: #333333;
+    font-weight: 700; }
+  .b-5-1 p {
+    font: 14px Arial;
+    color: #333333; }
+  .b-5-1 .bx-wrapper {
+    box-shadow: 0 0 0 0 !important;
+    padding: 5px 0 !important; }
 
 .b-6 {
   text-align: center; }
@@ -624,6 +780,8 @@ footer {
           footer .f_cont .f_right .f_contacts .f_icons .vk {
             max-width: 21px; }
 
+/*End Main page*/
+/*Mobile*/
 @media (max-width: 768px) {
   header .header_cont .logo {
     float: none;
@@ -664,7 +822,20 @@ footer {
   .bx-wrapper {
     margin-bottom: 20px !important; }
     .bx-wrapper .bx-pager {
-      bottom: 10px !important; }
+      bottom: 5px !important; }
+
+  .partners, .investors, .faq, .calculator, .cont_page, .about_us {
+    padding-left: 10px;
+    padding-right: 10px; }
+
+  .cont_page .cp_left {
+    width: auto;
+    padding-left: 2%;
+    padding-right: 2%; }
+  .cont_page .cp_right {
+    width: 96%;
+    padding-left: 2%;
+    padding-right: 2%; }
 
   .b-1 .b1_cont {
     padding-top: 0;
@@ -756,10 +927,21 @@ footer {
       width: 96%;
       padding-left: 2%;
       padding-right: 2%; }
+      footer .f_cont .f_left p span {
+        display: block;
+        text-align: center; }
     footer .f_cont .f_right {
       width: 96%;
       padding-left: 2%;
-      padding-right: 2%; } }
+      padding-right: 2%; }
+      footer .f_cont .f_right nav ul li a {
+        font-size: 12px; }
+      footer .f_cont .f_right .f_contacts .cont_cont span {
+        font-size: 12px; }
+      footer .f_cont .f_right .f_contacts .cont_cont a {
+        font-size: 12px; } }
+/* end Mobile*/
+/*Tablet*/
 @media (min-width: 769px) and (max-width: 1119px) {
   .banner .slide {
     padding-top: 100px;
@@ -843,5 +1025,6 @@ footer {
       width: 100px; }
     .partners .border-img img {
       width: auto !important; } }
+/*End Tablet*/
 
 /*# sourceMappingURL=style.css.map */
