--- a/crypto/scss/style.scss
+++ b/crypto/scss/style.scss
@@ -23,7 +23,7 @@ button {
   content: "";
   display: table;
   clear: both; }
-
+/*Main page*/
 header{
 	background: url(images/h_bg.jpg) no-repeat;
 	background-size: cover;
@@ -151,9 +151,12 @@ header{
 		}
 	}
 }
+/*Scroll down to continue main page*/
+/*Other pages*/
 .banner-1{
 	background: url(images/partners.jpg) no-repeat;
 	background-size: cover;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.5) inset;
 	background-position: center center;
 	padding-top: 120px;
 	padding-bottom: 120px;
@@ -164,11 +167,56 @@ header{
 		text-align: center;
 	}
 }
-.partners{
+.banner-2{
+	background: url(images/investor.jpg) no-repeat;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.5) inset;
+	background-size: cover;
+	background-position: center center;
+	padding-top: 120px;
+	padding-bottom: 120px;
+}
+.banner-3{
+	background: url(images/about_us.jpg) no-repeat;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.5) inset;
+	background-size: cover;
+	background-position: center center;
+	background-position-y: 75%; 
+	padding-top: 120px;
+	padding-bottom: 120px;
+}
+.banner-4{
+	background: url(images/faq.jpg) no-repeat;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.5) inset;
+	background-size: cover;
+	background-position: center center;
+	background-position-y: 20%; 
+	padding-top: 120px;
+	padding-bottom: 120px;
+}
+.banner-5{
+	background: url(images/calc.png) no-repeat;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.5) inset;
+	background-size: cover;
+	background-position: center center;
+	background-position-y: 80%; 
+	padding-top: 120px;
+	padding-bottom: 120px;
+}
+.banner-6{
+	background: url(images/contact.jpg) no-repeat;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.5) inset;
+	background-size: cover;
+	background-position: center center;
+	background-position-y: 15%; 
+	padding-top: 120px;
+	padding-bottom: 120px;
+}
+.partners,.investors,.faq,.calculator,.cont_page{
 	max-width: 1120px;
 	margin-right: auto;
 	margin-left: auto;
 	margin-top: 50px;
+	padding-bottom: 50px;
 	p{
 		text-align: justify;
 		font: 14px Arial;
@@ -177,6 +225,59 @@ header{
 		text-indent: 30px;
 		line-height: 25px;
 		margin-bottom: 30px;
+	}
+	h4{
+		text-align: center;
+		font: 18px Arial;
+		font-weight: 700;
+		color: #333;
+		letter-spacing: 1px;
+		margin-bottom: 20px;
+	}
+	ol{
+		li{
+			font: 14px Arial;
+			font-weight: 700;
+			color: #333;
+			p{
+				margin-bottom: 0;
+				text-indent: 0;
+			}
+		}
+	}
+	ul{
+		padding-left: 30px;
+		margin-bottom: 20px;
+		li{
+			p{
+				margin-bottom: 0;
+				text-indent: 0;
+			}
+		}
+	}
+	.b-1{
+		.b1_cont{
+			.case{
+				vertical-align: top;
+				cursor: pointer;
+				&:hover{
+					margin-top:-10px;
+					transition: 0.5s;
+				}
+				.case_cont{
+					p{
+						text-indent: 0;
+						text-align: center;
+					}
+				}
+			}
+		}
+	}
+	.bx-wrapper{
+		margin-right: auto !important;
+		margin-left: auto !important;
+		box-shadow: 0 0 0 0;
+		padding-left: 50px !important;
 	}
 	h2{
 		text-transform: uppercase;
@@ -237,6 +338,72 @@ header{
 		}
 	}
 }
+.about_us{
+	max-width: 1120px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 50px;
+	padding-bottom: 50px;
+	p{
+		text-align: justify;
+		font: 14px Arial;
+		font-weight: 700;
+		color: #333;
+		line-height: 20px;
+		margin-bottom: 10px;
+	}
+}
+.faq{
+	h4{
+		text-align: left;
+		font-size: 22px;
+	}
+	p{
+		text-indent: 0;
+		margin-bottom: 15px;
+	}
+}
+.cont_page{
+	text-align: center;
+	max-width: 820px;
+	margin-left: auto;
+	margin-right: auto;
+	.cp_left{
+		display: inline-block;
+		vertical-align: top;
+		width: 48%;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		margin-bottom: 30px;
+		h2{
+			text-align: left;
+			font-size: 24px;
+			text-transform: none;
+			margin-bottom: 15px;
+		}
+		h4{
+			text-align: left;
+		}
+		p{
+			margin-bottom: 0px;
+			text-indent: 0;
+		}
+		.h4_email{
+			margin-top: 20px;
+		}
+	}
+	.cp_right{
+		display: inline-block;
+		vertical-align: top;
+		width: 48%;
+		margin-bottom: 30px;
+		img{
+			width: 100%;
+			max-width: 280px;
+		}
+	}
+}
+/*End Other pages*/
 /*Slider*/
 .bx-wrapper{
 	border: 0!important;
@@ -259,6 +426,7 @@ header{
 	}
 }
 /*End*/
+/*Main page*/
 .b-1{
 	.b1_cont{
 		max-width: 1120px;
@@ -276,6 +444,12 @@ header{
 			background-color: #f8f8f8;
 			margin-right: 22px;
 			box-shadow: 0px 4px 10px 2px rgba(0,0,0,0.08);
+			vertical-align: top;
+			cursor: pointer;
+			&:hover{
+				margin-top:-10px;
+				transition: 0.5s;
+			}
 			&:last-child{
 				margin-right: 0;
 			}
@@ -447,11 +621,26 @@ header{
 	padding-top: 10px;
 	padding-bottom: 10px;
 	background-image: url(images/bg-5.jpg);
-	margin-bottom: 100px;
 	h2{
 		text-align: center;
 		font: 16px AB;
 		color: #fff;
+	}
+}
+.b-5-1{
+	text-align: center;
+	h2{
+		font: 14px Arial;
+		color: #333333;
+		font-weight: 700;
+	}
+	p{
+		font: 14px Arial;
+		color: #333333;
+	}
+	.bx-wrapper{
+		box-shadow: 0 0 0 0 !important;
+		padding: 5px 0 !important;
 	}
 }
 .b-6{
@@ -764,6 +953,8 @@ footer{
 		}
 	}
 }
+/*End Main page*/
+/*Mobile*/
 @media (max-width: 768px) {
 	header {
 		.header_cont {
@@ -822,7 +1013,23 @@ footer{
 	.bx-wrapper {
 		margin-bottom: 20px !important;
 		.bx-pager{
-			bottom: 10px !important;
+			bottom: 5px !important;
+		}
+	}
+	.partners,.investors,.faq,.calculator,.cont_page,.about_us{
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	.cont_page{
+		.cp_left{
+			width: auto;
+			padding-left: 2%;
+			padding-right: 2%;
+		}
+		.cp_right{
+			width: 96%;
+			padding-left: 2%;
+			padding-right: 2%;
 		}
 	}
 	.b-1 {
@@ -951,15 +1158,42 @@ footer{
     			width: 96%;
     			padding-left: 2%;
     			padding-right: 2%;
+    			p{
+    				span{
+    					display: block;
+    					text-align: center;
+    				}
+    			}
     		}
     		.f_right{
     			width: 96%;
     			padding-left: 2%;
     			padding-right: 2%;
+    			nav{
+    				ul{
+    					li{
+    						a{
+    							font-size: 12px;
+    						}
+    					}
+    				}
+    			}
+    			.f_contacts {
+    				.cont_cont {
+    					span{
+    						font-size: 12px;
+    					}
+    					a{
+    						font-size: 12px;
+    					}
+    				}
+    			}
     		}
     	}
 	}
 }
+/* end Mobile*/
+/*Tablet*/
 @media (min-width: 769px) and (max-width: 1119px){
 	.banner {
 		.slide{
@@ -1086,3 +1320,4 @@ footer{
 		}
 	}
 }
+/*End Tablet*/
