--- a/irina_larina/scss/style.scss
+++ b/irina_larina/scss/style.scss
@@ -38,6 +38,9 @@ body,h1,h2,h3,h4,h5,p,ul,li{
 h2,p,span,h1,h3,h4,h5,a{
 	font-family: KC;
 }
+.ytp-title-text{
+	display: none;
+}
 .b-1{
 	background: url(images/bg-1.png) no-repeat;
 	background-size: 100%;
@@ -164,10 +167,10 @@ h2,p,span,h1,h3,h4,h5,a{
 		position: relative;
 		.body2{
 			position: absolute;
-			right: -55%;
+			right: -59%;
 			bottom: 0;
 			z-index: 3;
-			width: 80%;
+			width: 66%;
 		}
 		h2{
 			font-size: 2.020833333333333VW;
@@ -183,6 +186,13 @@ h2,p,span,h1,h3,h4,h5,a{
 			color: #872a4d;
 			font-weight: bold;
 			font-family: KV;
+			line-height: 30px;
+			span{
+				font-weight: bold;
+				font-size: 1.8375VW;
+				line-height: 14px;
+				font-family: KV;
+			}
 		}
 		form{
 			position: relative;
@@ -866,23 +876,38 @@ h2,p,span,h1,h3,h4,h5,a{
 			.pack-info{
 				border: 4px solid #964d69;
 				box-shadow: 0 0 0 9999px rgba(255,169,31,0.8) inset;
-					li{
-						p{
-							color: #872a4c;
-							font: 1.1022927689594355VW KV;
-							margin-bottom: 0;
+					ul{
+						.center{
+							text-align: center;
+							span{
+								background: url(images/disable.png) no-repeat;
+								background-position-x: left;
+								background-size: 32%;
+							}
 						}
-						.span1{
-							color: #872a4c;
-							font-size: 1.3778659611992945VW;
-							font-family: KV;
-							width: 20%;
-    						text-align: center;
-						}
-						.span2{
-							color: #872a4c;
-							font-size: 1.1022927689594355VW;
-							font-family: KV;
+						li{
+							p{
+								color: #872a4c;
+								font: 1.1022927689594355VW KV;
+								margin-bottom: 0;
+							}
+							span{
+								color: #872a4c ;
+								font: 1VW KC;
+								margin-bottom: 0;	
+							}
+							.span1{
+								color: #872a4c;
+								font-size: 1.3778659611992945VW;
+								font-family: KV;
+								width: 20%;
+	    						text-align: center;
+							}
+							.span2{
+								color: #872a4c;
+								font-size: 1.1022927689594355VW;
+								font-family: KV;
+							}
 						}
 					}
 				}
@@ -991,7 +1016,7 @@ h2,p,span,h1,h3,h4,h5,a{
 		text-align: center;
 		margin: 0 auto;
 		.c-video{
-			width: 92%;
+			/*width: 92%;*/
 			margin: 0 1.5%;
 			margin-bottom: 2.8%;
 			background: #b64066;
@@ -1489,6 +1514,11 @@ div.wpcf7 .ajax-loader{
     		}
     		h3{
     			font-size: 4.375VW;
+    			line-height: 67%;
+    			span{
+    				font-size: 2.5VW;
+    				line-height: 1px;
+    			}
     		}
     		input[type='text']{
 				font-size: 3.125VW;
@@ -1746,6 +1776,11 @@ div.wpcf7 .ajax-loader{
 					border: 2px solid #c08b9f;
     				border-radius: 7px;
     				ul{
+    					.center{
+    						span{
+    							font-size: 2.25VW;
+    						}
+    					}
     					li{
     						img{
     							width: 8%;
@@ -1760,7 +1795,7 @@ div.wpcf7 .ajax-loader{
 								font-size: 2.5VW;
     						}
     						.span2{
-    							font-size: 2.5VW;
+    							font-size: 2.3VW;
     						}
     					}
     				}
@@ -1821,6 +1856,9 @@ div.wpcf7 .ajax-loader{
 			    padding: 2%;
 			    border-width: 2px;
 			    margin-bottom: 5%;
+			    .c-video{
+			    	width: 92%;
+			    }
 			    h2{
 			    	font-size: 3.75VW;
 			    }
