--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -1026,6 +1026,9 @@ button,input[type="submit"]{
     		margin-bottom: 40px;
     	}
 	}
+	.comment{
+		margin: 0 10px;
+	}
 	.price{
 		padding-top: 20px;
     	padding-bottom: 25px;
