--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -110,7 +110,7 @@ input{
 .modal-form{
   	display: none;
 	width: 300px;
-	height: 100vh;
+	height: 100%;
 	position: fixed;
 	top: 0;
 	left: -300px;
