--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -153,7 +153,7 @@ input{
 	}
 	&__menu{
 		margin-bottom: 25px;
-		height: 50vh;
+		/*height: 50vh;*/
 		li{
 			line-height: 40px;
 			&:nth-child(3){
