--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -110,7 +110,7 @@ input{
 .modal-form{
   	display: none;
 	width: 300px;
-	min-height: 100%;
+	height: 100vh;
 	position: fixed;
 	top: 0;
 	left: -300px;
@@ -118,7 +118,7 @@ input{
 	z-index: 5;
     flex-direction: column;
     justify-content: space-between;
-    overflow: scroll;
+    overflow-y: scroll;
 	.modal-close{
 		cursor: pointer;
 		position: absolute;
