--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -118,7 +118,7 @@ input{
 	z-index: 5;
     flex-direction: column;
     justify-content: space-between;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
 	.modal-close{
 		cursor: pointer;
 		position: absolute;
@@ -514,10 +514,11 @@ input{
     	width: 173px;
     	padding-left: 38px;
     	margin: 0;
-    	height: 25px;
+    	height: 27px;
     	color: #7f7f7f;
     	font: 20px PFDL;
     	margin-bottom: 20px;
+    	border: 1px solid #7b7b7b;
 	}
 	input[type="submit"]{
 		font: 23px PFDL;
@@ -624,7 +625,7 @@ input{
 	    border-bottom: 0;
 	    border-left: 0;
 	    border-right: 1px solid #7b7b7b;
-	    height: 23px;
+	    height: 25px;
     	padding-top: 6px;
 	    margin-top: 1px;
     	margin-left: 1px;
