--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -108,7 +108,7 @@ input{
 }/*Modal end*/
 /*Modal menu*/
 .modal-form{
-  	display: none;
+  	display: flex;
 	width: 300px;
 	height: 100vh;
 	position: fixed;
@@ -1022,6 +1022,9 @@ input{
 		float: right;
 		max-width: 23px;
 		margin-top: 16px;
+		img{
+			width: 100%;
+		}
 	}
 	/*Modal end*/
 	.bg-2{
