--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -136,11 +136,12 @@ input{
 	&__top{
 		width: 100%;
 		height: 230px;
-		background-color: #87b9b7;
-		background-image: url(../img/mob-logo.png);
-		background-size: auto 100%;
-		background-repeat: no-repeat;
-		margin-bottom: 10px;
+		background-color: #87b9b7 !important;
+		background-image: url(../img/mob-logo.png) !important;
+		background-size: auto 100% !important;
+		background-repeat: no-repeat !important;
+		margin-bottom: 10px !important;
+		padding: 0 !important;
 		h2{
 			font: 25px MR;
 			color: #fff;
@@ -216,6 +217,18 @@ input{
 }
 .modal-run{
 	display: none;
+}
+/*.mm-menu.mm-offcanvas{
+	max-width: 300px !important;
+}*/
+.mm-panels>.mm-panel:after{
+	height: 0 !important;
+}
+.mm-listview>li>a, .mm-listview>li>span{
+	display: inline-block !important;
+}
+.mm-panels, .mm-panels>.mm-panel{
+	position: static !important;
 }
 .overlay{
   	display: none;
