--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -230,7 +230,7 @@ html.mm-opening .mm-menu.mm-opened~.mm-slideout{
 }
 .mm-listview{
 	height: 100vh !important;
-	padding-bottom: 30px;
+	padding-bottom: 30px !important;
     display: flex !important;
     justify-content: space-between !important;
 }
