--- a/mrcleaner/scss/style.scss
+++ b/mrcleaner/scss/style.scss
@@ -138,7 +138,8 @@ input{
 	}
 	&__top{
 		width: 100%;
-		height: 230px;
+		min-height: 230px;
+		max-height: 230px;
 		background-color: #87b9b7 !important;
 		background-image: url(../img/mob-logo.png) !important;
 		background-size: auto 100% !important;
@@ -158,6 +159,7 @@ input{
 	}
 	&__menu{
 		margin-bottom: 25px;
+		overflow-y: scroll;
 		/*height: 50vh;*/
 		li{
 			line-height: 40px;
@@ -234,6 +236,9 @@ html.mm-opening .mm-menu.mm-opened~.mm-slideout{
 	min-height: 30px !important;
     display: flex !important;
     justify-content: space-between !important;
+}
+#mm-blocker{
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.7) inset;
 }
 /*.mm-panels>.mm-panel:after{
 	height: 0 !important;
